--- a/front/styles/global.css
+++ b/front/styles/global.css
@@ -39,6 +39,7 @@ body {
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  --point: oklch(0.623 0.214 259.815);
 }
 
 .dark {
