--- a/front/styles/global.css
+++ b/front/styles/global.css
@@ -34,6 +34,22 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --point: 221.2 83.2% 53.3%;
+
+    /* 여름 */
+    --main: #72affe;
+    --subMain: #81cede;
+    --lightMain: #c3e8eb;
+    --mainPoint: #ddd3c2;
+    /*  */
+    --grey: #aaa;
+    --lightGrey: #f3f3f3;
+    --lightGrey2: #dfdfdf;
+    --darkGrey: #999;
+    --white: #fff;
+    --black: #000;
+    --red: #ee0000;
+
+    --layout: 1500px;
   }
 
   .dark {
