--- a/front/styles/global.css
+++ b/front/styles/global.css
@@ -42,9 +42,11 @@ body {
     --mainPoint: #ddd3c2;
     /*  */
     --grey: #aaa;
+    --grey2: #c9c9c9;
     --lightGrey: #f3f3f3;
     --lightGrey2: #dfdfdf;
     --darkGrey: #999;
+    --darkGrey2: #4c4c4c;
     --white: #fff;
     --black: #000;
     --red: #ee0000;
