--- a/front/styles/global.css
+++ b/front/styles/global.css
@@ -51,7 +51,7 @@ body {
     --point: 221.2 83.2% 53.3%;
 
     /* 여름 */
-    --main: #72affe;
+    --main: #27e9d3;
     --main2: #23307e;
     --main3: #ffd804;
     --subMain: #81cede;
